<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (C) 2009 Virgil Dobjanschi, Jeff Sharkey, Filip Maelbrancke
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
         http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="app_name">Devoxx Schedule</string>

    <string name="sessions_room">Room</string>

    <string name="session_details_title">Session details</string>
    <string name="session_details_moderation">"REMOVE_THIS_: %s"</string>

	<string name="speaker_bio_title">Speaker bio</string>

    <string name="starred_slot_empty_title">You are available</string>
    <string name="starred_slot_empty_subtitle">Click here to star sessions</string>
    <string name="starred_add_session">Star sessions</string>


	<string name="block_time">"%s - %s"</string>

    <string name="title_search">"Search '%s'"</string>

    <string name="dialog_loading">Initializing database\u2026</string>

    <string name="schedule">Schedule</string>
    <string name="starred">Starred</string>
    <string name="twitter">Twitter</string>
    <string name="more">More</string>

    <string name="map_label">Map</string>

    <string name="main_no_data">No items found.</string>

    <string name="search_label">Devoxx schedule</string>
    <string name="search_hint">Session keywords</string>

    <string name="collapse">Collapse/Expand</string>
    <string name="menu_search">Search</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_venue">Venue</string>
    <string name="menu_level_1">Level 1: Registration</string>
    <string name="menu_level_1b">Level 1: Exhibition</string>
    <string name="menu_level_2">Level 2: Talks</string>
    <string name="menu_about">About</string>

    <string name="about_text1">"Based on 'Google I/O 2009', which was released by Virgil Dobjanschi and Jeff Sharkey under the Apache 2.0 license"</string>
    <string name="about_text2">"Modified for the Devoxx conference by:"</string>
    <string name="about_text3">"Filip Maelbrancke\nfilip@maelbrancke.net"</string>
    <string name="about_text4">"Source available at http://code.google.com/p/conferenceschedule/"</string>
    <string name="about_version">"Version %s"</string>

</resources>
