<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (C) 2009 Virgil Dobjanschi, Jeff Sharkey
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
         http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/collapse"
        android:title="@string/collapse"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/map"
        android:title="@string/map_label"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search" />

    <item
        android:id="@+id/menu_tracks"
        android:title="@string/menu_tracks"
        android:icon="@android:drawable/ic_menu_agenda" />

    <item android:id="@+id/venue"
    	android:title="@string/menu_venue"
    	android:icon="@drawable/ic_menu_goto">
        <menu>        

            <item android:id="@+id/menu_level_1"
                android:title="@string/menu_level_1"/>
                
            <item android:id="@+id/menu_level_1b"
                android:title="@string/menu_level_1b"/>
        
            <item android:id="@+id/menu_level_2"
                android:title="@string/menu_level_2"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_info_details" />
        
</menu>
